# my-shop

./: .env.example  Dockerfile  commands  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_05_26_1416-1a59b95ebcc6_initial_migration.py  2026_05_26_2054-ae2be25f532b_initial_migration.py  2026_06_06_1107-eccbb4372971_add_is_admin.py  2026_06_07_0840-f37f25b8ad67_change_mail_to_email_in_users_model.py  2026_06_08_0948-ecd22836c78b_del_not_null_in_phone_email_name_in_.py  2026_06_16_1243-cbbddaa5f599_add_unique_mail.py  2026_06_17_1258-1eb9cc3b5412_initial_migration.py  2026_06_18_1235-469a3814d4aa_add_waiting_payment_in_orderstatus.py
app/: main.py
app/api_v1/products/: views.py
app/core/: config.py  logger.py
app/core/db/: models.py  postgres.py
app/core/models/: __init__.py  order.py  order_item.py  product.py  user.py
app/domains/auth/: dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  security.py  service.py
app/domains/base/: exceptions.py  repository.py  service.py
app/domains/mailing/: router.py  send_email.py  send_order_notification.py  send_welcome_email.py
app/domains/orders/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/payments/: dependencies.py  exceptions.py  models.py  provider.py  repository.py  router.py  schemas.py  service.py  webhooks.py
app/domains/products/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/users/: exceptions.py  models.py  repository.py  router.py  schemas.py  (+1 more)
